--- a/style.css
+++ b/style.css
@@ -9,12 +9,16 @@ body {
   justify-content: center;
 }
 .question-footer {
-    border-top: 1px solid rgba(0, 0, 0, 0.4);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 12px;
+  border-top: 1px solid rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 12px;
 }
 .quiz-card {
-    width: 30rem;
+  width: 30rem;
+}
+.quiz-answer-card:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.4);
 }
