--- a/style.css
+++ b/style.css
@@ -20,5 +20,8 @@ body {
 }
 .quiz-answer-card:hover {
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.bg-success, .bg-danger {
+  color: white !important;
 }
