--- a/style.css
+++ b/style.css
@@ -25,3 +25,18 @@ body {
 .bg-success, .bg-danger {
   color: white !important;
 }
+.width-100 {
+  width: 100%;
+}
+.text-center {
+  text-align: center;
+}
+.finish-text {
+  font-size: 38px;
+  margin-bottom: 32px;
+}
+.button-row {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
+}
